Change <body> background-color to fff9f3

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -1,4 +1,6 @@
 
+<!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8">
     <title>Fresh Tomatoes!</title>
@@ -11,6 +13,7 @@
     <style type="text/css" media="screen">
         body {
             padding-top: 80px;
+            background-color: #fff9f3; 
         }
         #trailer .modal-dialog {
             margin-top: 200px;
